# daasoft

./: LICENSE  README.md  pyproject.toml  test_daasoft.py
src/daasoft/: Normalize.py  Numbers.py  Punctuation.py  Unicode.py  __init__.py
